--- a/src-electron/assets/index.html
+++ b/src-electron/assets/index.html
@@ -4,12 +4,19 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<title>Document</title>
+		<style>
+			body {
+				margin: 0;
+				padding: 0;
+				overflow: hidden;
+
+				background-color: transparent;
+			}
+		</style>
 	</head>
 	<body>
-		<img
-			src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Youtube_loading_symbol_1_(wobbly).gif"
-			alt="loading"
-		/>
+		<img src="./icon.png" alt="loading" height="300" width="300" />
 	</body>
 </html>
